- detecting input devices:
  o display the real accessed /dev/input/eventX file (mga#8232)
  o do not crash if /dev/input/eventX doesn't exist (mga#10296)
- draksec:
  o use expanders for clarity

Version 16.17 - 20 December 2013

- drakfont:
  o fix a crash (mga#12057)

Version 16.16 - 16 December 2013

- fix a drakx crash (mga#6031)

Version 16.15 - 12 December 2013

- workaround a gtk+3 issue resulting in blacked embbeded tools with some
  locales (eg: pl/uk) (mga#11969)

Version 16.13 - 10 December 2013

- localedrake:
  o fix crash when selecting an input method (mga#11939)

Version 16.12 - 9 December 2013

- partitioning wizard:
  o log failures (mga#11924)
  o workaround a crash (mga#11924)

Version 16.11 - 6 December 2013

- fix a crash in rpmdrake when package list is empty (mga#11901)

Version 16.8 - 5 December 2013

- prevent drakxtools-backend to require Glib::Object::Introspection (mga#11842)

Version 16.7 - 5 December 2013

- diskdrake:
  o fix a crash when creating partitions (mga#11876)

Version 16.6 - 4 December 2013

- fix blue background behind left panel text (mga#11866)
  (for not yet released gtk3 mcc)

Version 16.5 - 3 December 2013

- diskdrake:
  o detect eMMc block devices (Luc Menut, mga#11812)
  o fix a crash in partitioning wizard (mga#11820)
  o show labels on partition buttons again but ellipsized (mga#11858)

Version 16.4 - 2 December 2013

- fix banners not being blue anymore with Oxygen-gtk theme (kbo#328270)
- diskdrake:
  o fix diskdrake colorized partition tabs with Adwaita (bgo#719624)

Version 16.3 - 30 November 2013

- harddrake:
  o fix starting after draksound drop OSS/ALSA switch

Version 16.2 - 29 November 2013

- diskdrake:
  o fix dialog keeping growing when switching tabs (mga#11822):
    move partition labels to toolips
- draksound:
  o do not offer to switch to OSS
  o do not offer to switch to another driver if there's none
  o do not offer to pick a random driver when we've a default one
- finish-install: